mongo/mongo-express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
  namespace: mongo
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - host: kcs-mongo-express.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: mongo-express
            port: 
              number: 8081
